add code examples and update cont

--- a/theme.css
+++ b/theme.css
@@ -9,7 +9,7 @@
     --color-primary-100: #c0b3d1;
     --color-primary-200: #9680b3;
     --color-primary-300: #6c4d94;
-    --color-primary-400: #2d0066; /* BASE */
+    --color-primary-400: #2d0066;
     --color-primary-500: #1c003f;
 
     --color-gray-100: #f7f7f7;
@@ -52,7 +52,8 @@ h1 strong,
 h2 strong,
 h3 strong,
 h4 strong,
-h5 strong {
+h5 strong,
+p strong {
     color: var(--color-accent-400);
 }
 
@@ -93,6 +94,7 @@ h5 strong {
 button {
     display:flex;
     align-items: center;
+    justify-content: center;
     font-size: var(--font-md); 
     padding: var(--spacing-md) var(--spacing-2xl);
     border-radius: 16px;
@@ -162,18 +164,23 @@ input[type='checkbox']:hover {
 /* Utility Classes */
 .font-xs {
     font-size: var(--font-xs);
+    line-height: 0%;
 }
 .font-sm {
     font-size: var(--font-sm);
+    line-height: 0%;
 }
 .font-md {
     font-size: var(--font-md);
+    line-height: 0%;
 }
 .font-lg {
     font-size: var(--font-lg);
+    line-height: 0%;
 }
 .font-xl {
     font-size: var(--font-xl);
+    line-height: 0%;
 }
 
 .color-white {
@@ -308,7 +315,6 @@ input[type='checkbox']:hover {
     background-color: var(--color-white);
     border-radius: 16px;
     padding: var(--spacing-xl);
-    /* box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1); */
     box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);}
 
 .card > h1 {
@@ -329,6 +335,18 @@ input[type='checkbox']:hover {
     grid-column: 1/3;
     margin-top: var(--spacing-xl);
     place-self: center;
+}
+
+.grid-2-col {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: var(--spacing-md);
+}
+
+.grid-3-col {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: var(--spacing-md);
 }
 
 .two-col {
