--- a/theme.css
+++ b/theme.css
@@ -32,12 +32,12 @@
     --font-lg: 1.5rem;
     --font-xl: 2rem;
 
-    --spacing-sm: 8px;
-    --spacing-md: 16px;
-    --spacing-lg: 24px;
-    --spacing-xl: 32px;
-    --spacing-2xl: 64px;
-    --spacing-3xl: 128px;
+    --spacing-sm: .5rem;
+    --spacing-md: 1rem;
+    --spacing-lg: 2rem;
+    --spacing-xl: 3rem;
+    --spacing-2xl: 5rem;
+    --spacing-3xl: 10rem;
 
     --dimension-md: 50px;
 
@@ -68,10 +68,18 @@ li strong {
     padding: 4px var(--spacing-md);
 }
 
+.spacing-demo-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: var(--spacing-sm);
+    align-items: center;
+}
+
 .spacing-demo {
     background-color: var(--color-primary-400);
     padding: var(--spacing-md) 0;
     display: inline-block;
+    justify-self: end;
 }
 .spacing-demo.sm {
     width: var(--spacing-sm);
@@ -132,7 +140,7 @@ button.secondary:hover {
 
 label {
     display: flex;
-    gap: var(--spacing-md);
+    gap: var(--spacing-sm);
     align-items: center;
 }
 
@@ -315,26 +323,26 @@ input[type='checkbox']:hover {
 .card {
     background-color: var(--color-white);
     border-radius: 16px;
-    padding: var(--spacing-xl);
+    padding: var(--spacing-md);
     box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);}
 
 .card > h1 {
     margin: 0;
     font-size: var(--font-lg);
     color: var(--color-primary-300);
-    margin-bottom: var(--spacing-2xl);
+    margin-bottom: var(--spacing-lg);
 }
 
 .form {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: var(--spacing-lg);
+    gap: var(--spacing-md);
     justify-content: center;
 }
 
 .form > button {
     grid-column: 1/3;
-    margin-top: var(--spacing-xl);
+    margin-top: var(--spacing-sm);
     place-self: center;
 }
 
